--- a/saem7856/src/main/webapp/aboutUs.html
+++ b/saem7856/src/main/webapp/aboutUs.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>About Us</title>
 <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 </head>
 <body>
-
+소개소개소개소개소개소개소개소개소개소개소개소개소개소개소개소개소개소개소개
 </body>
 </html>
