--- a/saem7856/src/main/webapp/index.html
+++ b/saem7856/src/main/webapp/index.html
@@ -168,73 +168,66 @@
 					</form>
 				</section>
 
-				<!-- Menu -->
-				<nav id="menu">
-					<header class="major">
-						<h2>Menu</h2>
-					</header>
-					<ul>
-						<li><a href="index.html">Homepage</a></li>
-						<li><a href="generic.html">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
-						<li><span class="opener">Submenu</span>
-							<ul>
-								<li><a href="#">Lorem Dolor</a></li>
-								<li><a href="#">Ipsum Adipiscing</a></li>
-								<li><a href="#">Tempus Magna</a></li>
-								<li><a href="#">Feugiat Veroeros</a></li>
-							</ul></li>
-						<li><a href="#">Etiam Dolore</a></li>
-						<li><a href="#">Adipiscing</a></li>
-						<li><span class="opener">Another Submenu</span>
-							<ul>
-								<li><a href="#">Lorem Dolor</a></li>
-								<li><a href="#">Ipsum Adipiscing</a></li>
-								<li><a href="#">Tempus Magna</a></li>
-								<li><a href="#">Feugiat Veroeros</a></li>
-							</ul></li>
-						<li><a href="#">Maximus Erat</a></li>
-						<li><a href="#">Sapien Mauris</a></li>
-						<li><a href="#">Amet Lacinia</a></li>
-					</ul>
-				</nav>
+							<!-- Menu -->
+								<nav id="menu">
+									<header class="major">
+										<h2>Menu</h2>
+									</header>
+									<ul>
+										<li><a href="index.html">Homepage</a></li>
+										<li><a href="./aboutUs.html">About us</a></li>
+										<li>
+											<span class="opener">League</span>
+											<ul>
+												<li><a href="#">EPL</a></li>
+												<li><a href="#">라리가</a></li>
+												<li><a href="#">분데스리가</a></li>
+												<li><a href="#">리그1</a></li>
+												<li><a href="#">러시아 프리미어리그</a></li>
+												<li><a href="#">쉬페르리그</a></li>
+											</ul>
+										</li>
+										<li>
+											<span class="opener">News</span>
+											<ul>
+												<li><a href="#">일정</a></li>
+												<li><a href="#">기사</a></li>
+												<li><a href="#">photo</a></li>
+											</ul>
+										</li>
+										<li>
+											<span class="opener">Community</span>
+											<ul>
+												<li><a href="#">자유게시판</a></li>
+												<li><a href="#">중고거래</a></li>
+												<li><a href="#">굿즈</a></li>
+											</ul>
+										</li>
+										<li>
+											<span class="opener">Contact</span>
+											<ul>
+												<li><a href="#">공지사항</a></li>
+												<li><a href="#">contact us</a></li>
+											</ul>
+										</li>
+										<li>
+											<span class="opener">Admin</span>
+											<ul>
+												<li><a href="#">Lorem Dolor</a></li>
+												<li><a href="#">Ipsum Adipiscing</a></li>
+												<li><a href="#">Tempus Magna</a></li>
+												<li><a href="#">Feugiat Veroeros</a></li>
+											</ul>
+										</li>
+									</ul>
+								</nav>
 
-				<!-- Section -->
-				<section>
-					<header class="major">
-						<h2>Ante interdum</h2>
-					</header>
-					<div class="mini-posts">
-						<article>
-							<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-							<p>Aenean ornare velit lacus, ac varius enim lorem
-								ullamcorper dolore aliquam.</p>
-						</article>
-						<article>
-							<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
-							<p>Aenean ornare velit lacus, ac varius enim lorem
-								ullamcorper dolore aliquam.</p>
-						</article>
-						<article>
-							<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-							<p>Aenean ornare velit lacus, ac varius enim lorem
-								ullamcorper dolore aliquam.</p>
-						</article>
-					</div>
-					<ul class="actions">
-						<li><a href="#" class="button">More</a></li>
-					</ul>
-				</section>
 
 				<!-- Section -->
 				<section>
 					<header class="major">
 						<h2>Get in touch</h2>
 					</header>
-					<p>Sed varius enim lorem ullamcorper dolore aliquam aenean
-						ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin
-						sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat
-						tempus aliquam.</p>
 					<ul class="contact">
 						<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
 						<li class="icon solid fa-phone">(000) 000-0000</li>
